<resources>
    <string name="app_name">Task2</string>
    <string name="fotografi">Fotografi.</string>
    <string name="deskripsi">Someone who records events in the form of images for various objects such as people, places and events using a camera.</string>
    <string name="get">Get Started</string>
    <string name="welcome">Welcome Back!</string>
    <string name="sign">Please sign in to your account</string>
    <string name="email">Email Address</string>
    <string name="pass">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="signin">Sign In</string>
    <string name="signingoogle">Sign In with Google</string>
    <string name="donthave">Don\'t have an account? <font color="#6F96FA"><b> Sign Up</b></font></string>
    <string name="new_account">Create new account</string>
    <string name="sign2">Please fill in the from to continue</string>
    <string name="fullname">Full Name</string>
    <string name="phone">Phone Number</string>
    <string name="signup">Sign Up</string>
    <string name="have">Have an Account? <font color="#6F96FA"><b> Sign In</b></font></string>
    <string name="min_length_char">Minimal Length %1$d characters</string>
    <string name="invalid_email">Format email is invalid!</string>
    <string name="message_validation">Enter your %1$s</string>
    <string name="name">Satrio Muslim Wibowo</string>
    <string name="email_see">satriomuslim2627@gmail.com</string>
    <string name="created_at">Created At</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>