<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_welcome_page"
    tools:context=".fragment.MainFragment">

    <TextView
        android:id="@+id/tv_football"
        style="@style/Text.Title"
        android:layout_marginBottom="5dp"
        android:text="@string/fotografi"
        android:textColor="#2196F3"
        android:textSize="@dimen/size40"
        app:layout_constraintBottom_toTopOf="@+id/tv_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_text"
        style="@style/Text2"
        android:layout_marginBottom="8dp"
        android:text="@string/deskripsi"
        android:textColor="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/btn_get"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_get"
        style="@style/Button_sigin"
        android:layout_marginBottom="8dp"
        android:text="@string/get"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>